--- a/base.css
+++ b/base.css
@@ -1,31 +1,32 @@
 body {
 
-	background-color: #e9e9e9;
-
+	background-color: white;
 
 
 }
 
 h1 {
-  padding-top: 80px;
+  padding-top: 10px;
   color: #626262;
   text-align: center;
 	font-family: helvetica;
-  letter-spacing: 3;
+	font-size: 20px;
+
 
 }
 
 h2 {
-  color: #8a8a8a;
+  color: #626262;
   text-align: center;
 	font-family: helvetica;
-  font-size: 16px;
-
+  font-size: 8px;
+	margin-top: -12px;
 
 }
 
 h3 {
   color: #8a8a8a;
+	text-align: center;
 	font-family: helvetica;
   font-size: 16px;
 
@@ -33,11 +34,10 @@ h3 {
 }
 
 p {
-  width: 500px;
-  font-family: helvetica;
-  font-size: 16px;
-  display:block;
-  float:none
+	color: #8a8a8a;
+	text-align: center;
+	font-family: helvetica;
+  font-size: 8px;
 }
 
 .img {
